disp/display_library_fun.h

extern "C" void DrawTextlnXYw141(const char* s,long x,long y,unsigned long cfg,unsigned long cbg);
extern "C" void DrawTextlnXYw142(const char* s,long x,long y,unsigned long cfg);
extern "C" void DrawTextlnXYw143(const char* s,unsigned long x,unsigned long y);
extern "C" void DrawTextlnw144(const char* s,unsigned long cfg,unsigned long cbg);
extern "C" void DrawTextlnw145(const char* s,unsigned long cfg);
extern "C" void DrawTextlnw146(const char* s);
extern "C" unsigned long GetPixel147(pbitmap b,unsigned long x,unsigned long y);
extern "C" unsigned long GetPixel148(unsigned long x,unsigned long y);
extern "C" void SetPixel149(pbitmap b,unsigned long x,unsigned long y,unsigned long c);
extern "C" void SetPixel150(unsigned long x,unsigned long y,unsigned long c);
extern "C" void SetPixel151(unsigned long x,unsigned long y);
extern "C" unsigned long GetBBPixel152(pbitbuf bb,unsigned long x,unsigned long y);
extern "C" void SetBBPixel153(pbitbuf bb,unsigned long x,unsigned long y,unsigned long c);
extern "C" void Line154(pbitmap b,long x,long y,long w,long h,unsigned long c);
extern "C" void Line155(long x,long y,long w,long h,unsigned long c);
extern "C" void Line156(long x,long y,long w,long h);
extern "C" void LineBB157(pbitbuf bb,long x,long y,long w,long h,unsigned long c);
extern "C" void Bar158(pbitmap b,long x,long y,long w,long h,unsigned long cfg,unsigned long cbg);
extern "C" void Bar159(pbitmap b,long x,long y,long w,long h,unsigned long c);
extern "C" void Bar160(long x,long y,long w,long h,unsigned long cfg,unsigned long cbg);
extern "C" void Bar161(long x,long y,long w,long h,unsigned long c);
extern "C" void Bar162(long x,long y,long w,long h);
extern "C" void Clear163(pbitmap b,unsigned long c);
extern "C" void Clear164(pbitmap b);
extern "C" void Clear165(unsigned long c);
extern "C" void Clear166();
extern "C" void Triangle167(pbitmap b,long x1,long y1,long x2,long y2,long x3,long y3,unsigned long cfg,unsigned long cbg);
extern "C" void Triangle168(long x1,long y1,long x2,long y2,long x3,long y3,unsigned long cfg,unsigned long cbg);
extern "C" void Triangle169(long x1,long y1,long x2,long y2,long x3,long y3,unsigned long c);
extern "C" void Triangle170(long x1,long y1,long x2,long y2,long x3,long y3);
extern "C" void Arc171(pbitmap b,long x,long y,long rx,long ry,double sa,double ea,unsigned long cfg,unsigned long cbg);
extern "C" void Arc172(long x,long y,long rx,long ry,double sa,double ea,unsigned long cfg,unsigned long cbg);
extern "C" void Arc173(long x,long y,long rx,long ry,double sa,double ea,unsigned long c);
extern "C" void Arc174(long x,long y,long rx,long ry,double sa,double ea);
extern "C" void Pie175(pbitmap b,long x,long y,long rx,long ry,double sa,double ea,unsigned long cfg,unsigned long cbg);
extern "C" void Pie176(long x,long y,long rx,long ry,double sa,double ea,unsigned long cfg,unsigned long cbg);
extern "C" void Pie177(long x,long y,long rx,long ry,double sa,double ea,unsigned long c);
extern "C" void Pie178(long x,long y,long rx,long ry,double sa,double ea);
extern "C" void Chord179(pbitmap b,long x,long y,long rx,long ry,double sa,double ea,unsigned long cfg,unsigned long cbg);
extern "C" void Chord180(long x,long y,long rx,long ry,double sa,double ea,unsigned long cfg,unsigned long cbg);
extern "C" void Chord181(long x,long y,long rx,long ry,double sa,double ea,unsigned long c);
extern "C" void Chord182(long x,long y,long rx,long ry,double sa,double ea);
extern "C" void Ellipse183(pbitmap b,long x,long y,long rx,long ry,unsigned long cfg,unsigned long cbg);
extern "C" void Ellipse184(long x,long y,long rx,long ry,unsigned long cfg,unsigned long cbg);
extern "C" void Ellipse185(long x,long y,long rx,long ry,unsigned long c);
extern "C" void Ellipse186(long x,long y,long rx,long ry);
extern "C" void Circle187(pbitmap b,long x,long y,long r,unsigned long cfg,unsigned long cbg);
extern "C" void Circle188(long x,long y,long r,unsigned long cfg,unsigned long cbg);
extern "C" void Circle189(long x,long y,long r,unsigned long c);
extern "C" void Circle190(long x,long y,long r);
extern "C" pbitmap CreateBMP191(pbitmap b,unsigned long w,unsigned long h,unsigned long c);
extern "C" pbitmap CreateBMP192(pbitmap b);
extern "C" pbitmap CreateBMP193(unsigned long w,unsigned long h,unsigned long c);
extern "C" pbitmap CreateBMP194(unsigned long w,unsigned long h);
extern "C" pbitmap CreateBMP195();
extern "C" void ReleaseBMP196(pbitmap b);
extern "C" void ReleaseBMP197();
extern "C" pbitmap LoadBMP198(const char* s,unsigned long c);
extern "C" pbitmap LoadBMP199(const char* s);
extern "C" void SaveBMP200(pbitmap b,const char* s);
extern "C" void DrawBMP201(pbitmap bs,pbitmap bd,unsigned long xs,unsigned long ys,unsigned long ws,unsigned long hs,unsigned long xd,unsigned long yd,unsigned long wd,unsigned long hd,unsigned long c);
extern "C" void DrawBMP202(pbitmap bs,pbitmap bd,unsigned long xs,unsigned long ys,unsigned long ws,unsigned long hs,unsigned long xd,unsigned long yd,unsigned long wd,unsigned long hd);
extern "C" void DrawBMP203(pbitmap bs,pbitmap bd,unsigned long xs,unsigned long ys,unsigned long xd,unsigned long yd,unsigned long w,unsigned long h,unsigned long c);
extern "C" void DrawBMP204(pbitmap bs,pbitmap bd,unsigned long xs,unsigned long ys,unsigned long xd,unsigned long yd,unsigned long w,unsigned long h);
extern "C" void DrawBMP205(pbitmap bs,pbitmap bd,unsigned long xd,unsigned long yd,unsigned long wd,unsigned long hd,unsigned long c);
extern "C" void DrawBMP206(pbitmap bs,pbitmap bd,unsigned long xd,unsigned long yd,unsigned long wd,unsigned long hd);
extern "C" void DrawBMP207(pbitmap bs,pbitmap bd,unsigned long xd,unsigned long yd,unsigned long c);
extern "C" void DrawBMP208(pbitmap bs,pbitmap bd,unsigned long xd,unsigned long yd);
extern "C" void DrawBMP209(pbitmap bs,pbitmap bd,unsigned long c);
extern "C" void DrawBMP210(pbitmap bs,pbitmap bd);
extern "C" void DrawBMP211(pbitmap bs,unsigned long xs,unsigned long ys,unsigned long ws,unsigned long hs,unsigned long xd,unsigned long yd,unsigned long wd,unsigned long hd,unsigned long c);
extern "C" void DrawBMP212(pbitmap bs,unsigned long xs,unsigned long ys,unsigned long ws,unsigned long hs,unsigned long xd,unsigned long yd,unsigned long wd,unsigned long hd);
extern "C" void DrawBMP213(pbitmap bs,unsigned long xs,unsigned long ys,unsigned long xd,unsigned long yd,unsigned long w,unsigned long h,unsigned long c);
extern "C" void DrawBMP214(pbitmap bs,unsigned long xs,unsigned long ys,unsigned long xd,unsigned long yd,unsigned long w,unsigned long h);
extern "C" void DrawBMP215(pbitmap bs,unsigned long xd,unsigned long yd,unsigned long wd,unsigned long hd,unsigned long c);
extern "C" void DrawBMP216(pbitmap bs,unsigned long xd,unsigned long yd,unsigned long wd,unsigned long hd);
extern "C" void DrawBMP217(pbitmap bs,unsigned long xd,unsigned long yd,unsigned long c);
extern "C" void DrawBMP218(pbitmap bs,unsigned long xd,unsigned long yd);
extern "C" void DrawBMP219(pbitmap bs,unsigned long c);
extern "C" void DrawBMP220(pbitmap bs);
extern "C" void DrawBMP221(unsigned long xs,unsigned long ys,unsigned long ws,unsigned long hs,unsigned long xd,unsigned long yd,unsigned long wd,unsigned long hd,unsigned long c);
extern "C" void DrawBMP222(unsigned long xs,unsigned long ys,unsigned long ws,unsigned long hs,unsigned long xd,unsigned long yd,unsigned long wd,unsigned long hd);
extern "C" void DrawBMP223(unsigned long xs,unsigned long ys,unsigned long xd,unsigned long yd,unsigned long w,unsigned long h,unsigned long c);
extern "C" void DrawBMP224(unsigned long xs,unsigned long ys,unsigned long xd,unsigned long yd,unsigned long w,unsigned long h);
extern "C" void DrawBMP225(unsigned long xd,unsigned long yd,unsigned long wd,unsigned long hd,unsigned long c);
extern "C" void DrawBMP226(unsigned long xd,unsigned long yd,unsigned long wd,unsigned long hd);
extern "C" void DrawBMP227(unsigned long xd,unsigned long yd,unsigned long c);
extern "C" void DrawBMP228(unsigned long xd,unsigned long yd);
extern "C" void DrawBMP229(unsigned long c);
extern "C" void DrawBMP230();
extern "C" void MixBMP231(pbitmap b1,pbitmap b2,pbitmap b3);
extern "C" void BlurBMPBox232(pbitmap b,unsigned long d,unsigned long n);
extern "C" void BlurBMPBox233(pbitmap b,unsigned long d);
extern "C" void BlurBMPGau234(pbitmap b,double d);
extern "C" pbitbuf CreateBB235(pbitmap b);
extern "C" void ReleaseBB236(pbitbuf bb);
extern "C" void GetBB237(pbitbuf bb);
extern "C" void SetBB238(pbitbuf bb);
extern "C" void MixBB239(pbitbuf bb1,pbitbuf bb2,pbitbuf bb3);
extern "C" void BlurBBBox240(pbitbuf bb,unsigned long d,unsigned long n);
extern "C" void BlurBBGau241(pbitbuf bb,double d);
extern "C" void PressKey242(unsigned char k,unsigned long t);
extern "C" void PressKey243(unsigned char k);
extern "C" void DownKey244(unsigned char k);
extern "C" void UpKey245(unsigned char k);
extern "C" void PressMouse246(unsigned char m,unsigned long t);
extern "C" void PressMouse247(unsigned char m);
extern "C" void DownMouse248(unsigned char m);
extern "C" void UpMouse249(unsigned char m);
extern "C" void WheelMouse250(long wl);
extern "C" void MoveMouse251(long x,long y);
extern "C" void MoveMouseAbs252(long x,long y);
extern "C" void MoveMouseWin253(long x,long y);
extern "C" void MoveMousePos254(long x,long y);
extern "C" void SendMsg255();
extern "C" bool IsNextMsg256();
extern "C" unsigned long GetNextMsg257();
extern "C" unsigned long WaitNextMsg258();
extern "C" bool IsMsg259(unsigned long uM);
extern "C" long long GetMsg260(unsigned long uM);
extern "C" long long WaitMsg261(unsigned long uM);
extern "C" bool IsKey262(unsigned long k);
extern "C" bool IsKey263();
extern "C" unsigned long GetKey264();
extern "C" unsigned long WaitKey265(unsigned long k);
extern "C" unsigned long WaitKey266();