disp/display_library.pas

procedure DrawTextlnXYw141(s:pchar;x,y:longint;cfg,cbg:longword);cdecl;
begin display.DrawTextlnXYw(s,x,y,cfg,cbg);end;
procedure DrawTextlnXYw142(s:pchar;x,y:longint;cfg:longword);cdecl;
begin display.DrawTextlnXYw(s,x,y,cfg);end;
procedure DrawTextlnXYw143(s:pchar;x,y:longword);cdecl;
begin display.DrawTextlnXYw(s,x,y);end;
procedure DrawTextlnw144(s:pchar;cfg,cbg:longword);cdecl;
begin display.DrawTextlnw(s,cfg,cbg);end;
procedure DrawTextlnw145(s:pchar;cfg:longword);cdecl;
begin display.DrawTextlnw(s,cfg);end;
procedure DrawTextlnw146(s:pchar);cdecl;
begin display.DrawTextlnw(s);end;
function GetPixel147(b:pbitmap;x,y:longword):longword;cdecl;
begin GetPixel147:=display.GetPixel(b,x,y);end;
function GetPixel148(x,y:longword):longword;cdecl;
begin GetPixel148:=display.GetPixel(x,y);end;
procedure SetPixel149(b:pbitmap;x,y:longword;c:longword);cdecl;
begin display.SetPixel(b,x,y,c);end;
procedure SetPixel150(x,y:longword;c:longword);cdecl;
begin display.SetPixel(x,y,c);end;
procedure SetPixel151(x,y:longword);cdecl;
begin display.SetPixel(x,y);end;
function GetBBPixel152(bb:pbitbuf;x,y:longword):longword;cdecl;
begin GetBBPixel152:=display.GetBBPixel(bb,x,y);end;
procedure SetBBPixel153(bb:pbitbuf;x,y,c:longword);cdecl;
begin display.SetBBPixel(bb,x,y,c);end;
procedure Line154(b:pbitmap;x,y,w,h:longint;c:longword);cdecl;
begin display.Line(b,x,y,w,h,c);end;
procedure Line155(x,y,w,h:longint;c:longword);cdecl;
begin display.Line(x,y,w,h,c);end;
procedure Line156(x,y,w,h:longint);cdecl;
begin display.Line(x,y,w,h);end;
procedure LineBB157(bb:pbitbuf;x,y,w,h:longint;c:longword);cdecl;
begin display.LineBB(bb,x,y,w,h,c);end;
procedure Bar158(b:pbitmap;x,y,w,h:longint;cfg,cbg:longword);cdecl;
begin display.Bar(b,x,y,w,h,cfg,cbg);end;
procedure Bar159(b:pbitmap;x,y,w,h:longint;c:longword);cdecl;
begin display.Bar(b,x,y,w,h,c);end;
procedure Bar160(x,y,w,h:longint;cfg,cbg:longword);cdecl;
begin display.Bar(x,y,w,h,cfg,cbg);end;
procedure Bar161(x,y,w,h:longint;c:longword);cdecl;
begin display.Bar(x,y,w,h,c);end;
procedure Bar162(x,y,w,h:longint);cdecl;
begin display.Bar(x,y,w,h);end;
procedure Clear163(b:pbitmap;c:longword);cdecl;
begin display.Clear(b,c);end;
procedure Clear164(b:pbitmap);cdecl;
begin display.Clear(b);end;
procedure Clear165(c:longword);cdecl;
begin display.Clear(c);end;
procedure Clear166();cdecl;
begin display.Clear();end;
procedure Triangle167(b:pbitmap;x1,y1,x2,y2,x3,y3:longint;cfg,cbg:longword);cdecl;
begin display.Triangle(b,x1,y1,x2,y2,x3,y3,cfg,cbg);end;
procedure Triangle168(x1,y1,x2,y2,x3,y3:longint;cfg,cbg:longword);cdecl;
begin display.Triangle(x1,y1,x2,y2,x3,y3,cfg,cbg);end;
procedure Triangle169(x1,y1,x2,y2,x3,y3:longint;c:longword);cdecl;
begin display.Triangle(x1,y1,x2,y2,x3,y3,c);end;
procedure Triangle170(x1,y1,x2,y2,x3,y3:longint);cdecl;
begin display.Triangle(x1,y1,x2,y2,x3,y3);end;
procedure Arc171(b:pbitmap;x,y,rx,ry:longint;sa,ea:double;cfg,cbg:longword);cdecl;
begin display.Arc(b,x,y,rx,ry,sa,ea,cfg,cbg);end;
procedure Arc172(x,y,rx,ry:longint;sa,ea:double;cfg,cbg:longword);cdecl;
begin display.Arc(x,y,rx,ry,sa,ea,cfg,cbg);end;
procedure Arc173(x,y,rx,ry:longint;sa,ea:double;c:longword);cdecl;
begin display.Arc(x,y,rx,ry,sa,ea,c);end;
procedure Arc174(x,y,rx,ry:longint;sa,ea:double);cdecl;
begin display.Arc(x,y,rx,ry,sa,ea);end;
procedure Pie175(b:pbitmap;x,y,rx,ry:longint;sa,ea:double;cfg,cbg:longword);cdecl;
begin display.Pie(b,x,y,rx,ry,sa,ea,cfg,cbg);end;
procedure Pie176(x,y,rx,ry:longint;sa,ea:double;cfg,cbg:longword);cdecl;
begin display.Pie(x,y,rx,ry,sa,ea,cfg,cbg);end;
procedure Pie177(x,y,rx,ry:longint;sa,ea:double;c:longword);cdecl;
begin display.Pie(x,y,rx,ry,sa,ea,c);end;
procedure Pie178(x,y,rx,ry:longint;sa,ea:double);cdecl;
begin display.Pie(x,y,rx,ry,sa,ea);end;
procedure Chord179(b:pbitmap;x,y,rx,ry:longint;sa,ea:double;cfg,cbg:longword);cdecl;
begin display.Chord(b,x,y,rx,ry,sa,ea,cfg,cbg);end;
procedure Chord180(x,y,rx,ry:longint;sa,ea:double;cfg,cbg:longword);cdecl;
begin display.Chord(x,y,rx,ry,sa,ea,cfg,cbg);end;
procedure Chord181(x,y,rx,ry:longint;sa,ea:double;c:longword);cdecl;
begin display.Chord(x,y,rx,ry,sa,ea,c);end;
procedure Chord182(x,y,rx,ry:longint;sa,ea:double);cdecl;
begin display.Chord(x,y,rx,ry,sa,ea);end;
procedure Ellipse183(b:pbitmap;x,y,rx,ry:longint;cfg,cbg:longword);cdecl;
begin display.Ellipse(b,x,y,rx,ry,cfg,cbg);end;
procedure Ellipse184(x,y,rx,ry:longint;cfg,cbg:longword);cdecl;
begin display.Ellipse(x,y,rx,ry,cfg,cbg);end;
procedure Ellipse185(x,y,rx,ry:longint;c:longword);cdecl;
begin display.Ellipse(x,y,rx,ry,c);end;
procedure Ellipse186(x,y,rx,ry:longint);cdecl;
begin display.Ellipse(x,y,rx,ry);end;
procedure Circle187(b:pbitmap;x,y,r:longint;cfg,cbg:longword);cdecl;
begin display.Circle(b,x,y,r,cfg,cbg);end;
procedure Circle188(x,y,r:longint;cfg,cbg:longword);cdecl;
begin display.Circle(x,y,r,cfg,cbg);end;
procedure Circle189(x,y,r:longint;c:longword);cdecl;
begin display.Circle(x,y,r,c);end;
procedure Circle190(x,y,r:longint);cdecl;
begin display.Circle(x,y,r);end;
function CreateBMP191(b:pbitmap;w,h:longword;c:longword):pbitmap;cdecl;
begin CreateBMP191:=display.CreateBMP(b,w,h,c);end;
function CreateBMP192(b:pbitmap):pbitmap;cdecl;
begin CreateBMP192:=display.CreateBMP(b);end;
function CreateBMP193(w,h:longword;c:longword):pbitmap;cdecl;
begin CreateBMP193:=display.CreateBMP(w,h,c);end;
function CreateBMP194(w,h:longword):pbitmap;cdecl;
begin CreateBMP194:=display.CreateBMP(w,h);end;
function CreateBMP195():pbitmap;cdecl;
begin CreateBMP195:=display.CreateBMP();end;
procedure ReleaseBMP196(b:pbitmap);cdecl;
begin display.ReleaseBMP(b);end;
procedure ReleaseBMP197();cdecl;
begin display.ReleaseBMP();end;
function LoadBMP198(s:pchar;c:longword):pbitmap;cdecl;
begin LoadBMP198:=display.LoadBMP(s,c);end;
function LoadBMP199(s:pchar):pbitmap;cdecl;
begin LoadBMP199:=display.LoadBMP(s);end;
procedure SaveBMP200(b:pbitmap;s:pchar);cdecl;
begin display.SaveBMP(b,s);end;
procedure DrawBMP201(bs,bd:pbitmap;xs,ys,ws,hs,xd,yd,wd,hd:longword;c:longword);cdecl;
begin display.DrawBMP(bs,bd,xs,ys,ws,hs,xd,yd,wd,hd,c);end;
procedure DrawBMP202(bs,bd:pbitmap;xs,ys,ws,hs,xd,yd,wd,hd:longword);cdecl;
begin display.DrawBMP(bs,bd,xs,ys,ws,hs,xd,yd,wd,hd);end;
procedure DrawBMP203(bs,bd:pbitmap;xs,ys,xd,yd,w,h:longword;c:longword);cdecl;
begin display.DrawBMP(bs,bd,xs,ys,xd,yd,w,h,c);end;
procedure DrawBMP204(bs,bd:pbitmap;xs,ys,xd,yd,w,h:longword);cdecl;
begin display.DrawBMP(bs,bd,xs,ys,xd,yd,w,h);end;
procedure DrawBMP205(bs,bd:pbitmap;xd,yd,wd,hd:longword;c:longword);cdecl;
begin display.DrawBMP(bs,bd,xd,yd,wd,hd,c);end;
procedure DrawBMP206(bs,bd:pbitmap;xd,yd,wd,hd:longword);cdecl;
begin display.DrawBMP(bs,bd,xd,yd,wd,hd);end;
procedure DrawBMP207(bs,bd:pbitmap;xd,yd:longword;c:longword);cdecl;
begin display.DrawBMP(bs,bd,xd,yd,c);end;
procedure DrawBMP208(bs,bd:pbitmap;xd,yd:longword);cdecl;
begin display.DrawBMP(bs,bd,xd,yd);end;
procedure DrawBMP209(bs,bd:pbitmap;c:longword);cdecl;
begin display.DrawBMP(bs,bd,c);end;
procedure DrawBMP210(bs,bd:pbitmap);cdecl;
begin display.DrawBMP(bs,bd);end;
procedure DrawBMP211(bs:pbitmap;xs,ys,ws,hs,xd,yd,wd,hd:longword;c:longword);cdecl;
begin display.DrawBMP(bs,xs,ys,ws,hs,xd,yd,wd,hd,c);end;
procedure DrawBMP212(bs:pbitmap;xs,ys,ws,hs,xd,yd,wd,hd:longword);cdecl;
begin display.DrawBMP(bs,xs,ys,ws,hs,xd,yd,wd,hd);end;
procedure DrawBMP213(bs:pbitmap;xs,ys,xd,yd,w,h:longword;c:longword);cdecl;
begin display.DrawBMP(bs,xs,ys,xd,yd,w,h,c);end;
procedure DrawBMP214(bs:pbitmap;xs,ys,xd,yd,w,h:longword);cdecl;
begin display.DrawBMP(bs,xs,ys,xd,yd,w,h);end;
procedure DrawBMP215(bs:pbitmap;xd,yd,wd,hd:longword;c:longword);cdecl;
begin display.DrawBMP(bs,xd,yd,wd,hd,c);end;
procedure DrawBMP216(bs:pbitmap;xd,yd,wd,hd:longword);cdecl;
begin display.DrawBMP(bs,xd,yd,wd,hd);end;
procedure DrawBMP217(bs:pbitmap;xd,yd:longword;c:longword);cdecl;
begin display.DrawBMP(bs,xd,yd,c);end;
procedure DrawBMP218(bs:pbitmap;xd,yd:longword);cdecl;
begin display.DrawBMP(bs,xd,yd);end;
procedure DrawBMP219(bs:pbitmap;c:longword);cdecl;
begin display.DrawBMP(bs,c);end;
procedure DrawBMP220(bs:pbitmap);cdecl;
begin display.DrawBMP(bs);end;
procedure DrawBMP221(xs,ys,ws,hs,xd,yd,wd,hd:longword;c:longword);cdecl;
begin display.DrawBMP(xs,ys,ws,hs,xd,yd,wd,hd,c);end;
procedure DrawBMP222(xs,ys,ws,hs,xd,yd,wd,hd:longword);cdecl;
begin display.DrawBMP(xs,ys,ws,hs,xd,yd,wd,hd);end;
procedure DrawBMP223(xs,ys,xd,yd,w,h:longword;c:longword);cdecl;
begin display.DrawBMP(xs,ys,xd,yd,w,h,c);end;
procedure DrawBMP224(xs,ys,xd,yd,w,h:longword);cdecl;
begin display.DrawBMP(xs,ys,xd,yd,w,h);end;
procedure DrawBMP225(xd,yd,wd,hd:longword;c:longword);cdecl;
begin display.DrawBMP(xd,yd,wd,hd,c);end;
procedure DrawBMP226(xd,yd,wd,hd:longword);cdecl;
begin display.DrawBMP(xd,yd,wd,hd);end;
procedure DrawBMP227(xd,yd:longword;c:longword);cdecl;
begin display.DrawBMP(xd,yd,c);end;
procedure DrawBMP228(xd,yd:longword);cdecl;
begin display.DrawBMP(xd,yd);end;
procedure DrawBMP229(c:longword);cdecl;
begin display.DrawBMP(c);end;
procedure DrawBMP230();cdecl;
begin display.DrawBMP();end;
procedure MixBMP231(b1,b2:pbitmap;var b3:pbitmap);cdecl;
begin display.MixBMP(b1,b2,b3);end;
procedure BlurBMPBox232(b:pbitmap;d:longword;n:longword);cdecl;
begin display.BlurBMPBox(b,d,n);end;
procedure BlurBMPBox233(b:pbitmap;d:longword);cdecl;
begin display.BlurBMPBox(b,d);end;
procedure BlurBMPGau234(b:pbitmap;d:double);cdecl;
begin display.BlurBMPGau(b,d);end;
function CreateBB235(b:pbitmap):pbitbuf;cdecl;
begin CreateBB235:=display.CreateBB(b);end;
procedure ReleaseBB236(bb:pbitbuf);cdecl;
begin display.ReleaseBB(bb);end;
procedure GetBB237(bb:pbitbuf);cdecl;
begin display.GetBB(bb);end;
procedure SetBB238(bb:pbitbuf);cdecl;
begin display.SetBB(bb);end;
procedure MixBB239(bb1,bb2:pbitbuf;var bb3:pbitbuf);cdecl;
begin display.MixBB(bb1,bb2,bb3);end;
procedure BlurBBBox240(bb:pbitbuf;d:longword;n:longword);cdecl;
begin display.BlurBBBox(bb,d,n);end;
procedure BlurBBGau241(bb:pbitbuf;d:double);cdecl;
begin display.BlurBBGau(bb,d);end;
procedure PressKey242(k:byte;t:longword);cdecl;
begin display.PressKey(k,t);end;
procedure PressKey243(k:byte);cdecl;
begin display.PressKey(k);end;
procedure DownKey244(k:byte);cdecl;
begin display.DownKey(k);end;
procedure UpKey245(k:byte);cdecl;
begin display.UpKey(k);end;
procedure PressMouse246(m:byte;t:longword);cdecl;
begin display.PressMouse(m,t);end;
procedure PressMouse247(m:byte);cdecl;
begin display.PressMouse(m);end;
procedure DownMouse248(m:byte);cdecl;
begin display.DownMouse(m);end;
procedure UpMouse249(m:byte);cdecl;
begin display.UpMouse(m);end;
procedure WheelMouse250(wl:longint);cdecl;
begin display.WheelMouse(wl);end;
procedure MoveMouse251(x,y:longint);cdecl;
begin display.MoveMouse(x,y);end;
procedure MoveMouseAbs252(x,y:longint);cdecl;
begin display.MoveMouseAbs(x,y);end;
procedure MoveMouseWin253(x,y:longint);cdecl;
begin display.MoveMouseWin(x,y);end;
procedure MoveMousePos254(x,y:longint);cdecl;
begin display.MoveMousePos(x,y);end;
procedure SendMsg255();cdecl;
begin display.SendMsg();end;
function IsNextMsg256():boolean;cdecl;
begin IsNextMsg256:=display.IsNextMsg();end;
function GetNextMsg257():longword;cdecl;
begin GetNextMsg257:=display.GetNextMsg();end;
function WaitNextMsg258():longword;cdecl;
begin WaitNextMsg258:=display.WaitNextMsg();end;
function IsMsg259(uM:longword):boolean;cdecl;
begin IsMsg259:=display.IsMsg(uM);end;
function GetMsg260(uM:longword):int64;cdecl;
begin GetMsg260:=display.GetMsg(uM);end;
function WaitMsg261(uM:longword):int64;cdecl;
begin WaitMsg261:=display.WaitMsg(uM);end;
function IsKey262(k:longword):boolean;cdecl;
begin IsKey262:=display.IsKey(k);end;
function IsKey263():boolean;cdecl;
begin IsKey263:=display.IsKey();end;
function GetKey264():longword;cdecl;
begin GetKey264:=display.GetKey();end;
function WaitKey265(k:longword):longword;cdecl;
begin WaitKey265:=display.WaitKey(k);end;
function WaitKey266():longword;cdecl;
